core/tests/snapshots/run_scripts__check_type.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (check_type), \".rain\"))"
---
Err
<hidden>:5:18
| let foo = fn() {
| 	Integer = internal._get_type(0)
| 	foo: Integer = ""
  	                 unrecoverable error: check error: type error: expected Integer, actual String
