core/tests/snapshots/run_scripts__check_underscore.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (check_underscore), \".rain\"))"
---
Ok
Unit
