core/tests/snapshots/run_scripts__closure.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (closure), \".rain\"))"
---
Ok
List(
    RainList(
        [
            String(
                "hi",
            ),
            String(
                "joe",
            ),
            String(
                "hi",
            ),
            String(
                "susan",
            ),
        ],
    ),
)
