core/tests/snapshots/run_scripts__closure_disambiguation.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (closure_disambiguation), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        5,
    ),
)
