core/tests/snapshots/run_scripts__complex_closures.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (complex_closures), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        23,
    ),
)
