core/tests/snapshots/run_scripts__conflicting_overlay_files.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat!\n(\"tests/scripts/\", stringify! (conflicting_overlay_files), \".rain\"))"
---
Err
<hidden>:4:12 main
<hidden>:5:2 main-inner
<hidden>:57:2
| pub let create_area = create_flat_area
| pub let create_flat_area = fn(fs_entries: List(Any)) -> Area {
| 	internal._create_area(fs_entries, true, false)
  	^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unrecoverable error: conflicting file names: foo.txt
