core/tests/snapshots/run_scripts__create_area.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (create_area), \".rain\"))"
---
Ok
Unit
