core/tests/snapshots/run_scripts__destructure.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (destructure), \".rain\"))"
---
Ok
List(
    RainList(
        [
            String(
                "4",
            ),
            Integer(
                RainInteger(
                    10,
                ),
            ),
        ],
    ),
)
