core/tests/snapshots/run_scripts__destructure_import.snap
---
source: core/tests/run_scripts.rs
expression: "run(concat! (\"tests/scripts/\", stringify! (destructure_import), \".rain\"))"
---
Ok
Integer(
    RainInteger(
        16,
    ),
)
